# leviscript

./: .gitignore  Justfile  readme.md
devlog/: 1.md  builtin_mechanics.md  functions.md  heap_mngmnt.md  type_checks_and_casting.md
doc/: Justfile  doc.html  git_prune.funs  notes_example.funs  overview.md
doc/src/: index.adoc  pdf_main.adoc  spec.adoc  tokens.adoc
interpreter/: .gitignore  Cargo.toml  dune-project  grammar.pest
interpreter/lib/: ast.ml  dune  lexer.ml  parser.mly  token.ml  tokenizer.ml  utils.ml
interpreter/proc-macros/src/: lib.rs
interpreter/src/: ast.rs  bytecode.rs  compiler.rs  debugger.rs  lib.rs  main.rs  opcode.rs  parser.rs  utils.rs  vm.rs
interpreter/test/: dune
leviscript-lib/: Cargo.toml  grammar.pest
leviscript-lib/proc-macros/: Cargo.toml
leviscript-lib/proc-macros/src/: ast_node.rs  lib.rs  opcode.rs
leviscript-lib/src/: bytecode.rs  compiler.rs  lib.rs  opcode.rs  parser.rs  type_inference.rs  utils.rs  vm.rs
leviscript-lib/src/core/: ast.rs  ast_macros.rs  bytecode.rs  bytecode_builder.rs  data.rs  final_bytecode.rs  heap.rs  intermediate_bytecode.rs  mod.rs  opcode.rs  scopes.rs  types.rs
leviscript-lib/src/vm/: built_ins.rs  heap.rs  memory.rs  mod.rs  stack.rs
test-script/: xexp.les
test-suite/: Cargo.toml
test-suite/src/: main.rs
test-suite/tests/: call.les  call.out  heap_and_scopes.les  heap_and_scopes.out  int_lit.les  int_lit.out  vars.les  vars.out  xexp.out
