[package]
name = "levis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leviscript-lib = { path = "../leviscript-lib"}
clap = { version = "4.2.3", features = ["derive"] }
anyhow = "1.0.70"
rustyline = "11.0.0"
crossterm = "0.26.1"

[features]
dev = []
